--- a/calc.html
+++ b/calc.html
@@ -2,7 +2,7 @@
 <head><title>html calculator</title></head>
 <body>
 <form name="calculator" >
-    Solution<input type="textfield" name="res" value="">
+    Answer<input type="textfield" name="res" value="">
     </br>
     <input type="button" value="1" onClick="document.calculator.res.value+='1'">
     <input type="button" value="2" onClick="document.calculator.res.value+='2'">
